crates/ruff_python_parser/src/semantic_errors/snapshots/ruff_python_syntax_errors__tests__nested_listcomp_expr.snap
---
source: crates/ruff_python_syntax_errors/src/lib.rs
expression: "test_snippet(contents, PythonVersion::default())"
---
[
    SemanticSyntaxError {
        kind: ReboundComprehensionVariable,
        range: 3..4,
        python_version: PythonVersion {
            major: 3,
            minor: 9,
        },
    },
]
